Added routing to songs and worship tab

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Songs</a>
+    <a class="nav-link" routerLink="songs" [ngClass]="{active: tabSelected === 'songs'}" (click)="tabSelected = 'songs'">Songs</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Worship</a>
+    <a class="nav-link" routerLink="worship" [ngClass]="{active: tabSelected === 'worship'}" (click)="tabSelected = 'worship'">Worship</a>
   </li>
 </ul>
+<div class="container-fluid">
+  <router-outlet></router-outlet>
+</div>
