Added basic song service (with feathers)

--- a/src/app/songs/songs.component.html
+++ b/src/app/songs/songs.component.html
@@ -15,4 +15,9 @@
       </form>
     </div>
   </div>
+  <div class="row" *ngIf="songs.length > 0">
+    <div class="col-12">
+      {{ songs[39].title_1 }}
+    </div>
+  </div>
 </div>
