--- a/src/app/songs/songs.component.css
+++ b/src/app/songs/songs.component.css
@@ -1,3 +1,7 @@
 .row {
-    padding: 10px;
+    padding: 15px;
+}
+
+:host /deep/ .data-table .data-table-row.selected {
+    background-color: #E4EDF9;
 }
