--- a/src/app/songs/songs.component.html
+++ b/src/app/songs/songs.component.html
@@ -1,23 +1,49 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-9">
-      <button type="button" class="btn btn-default">Add New</button>
-      <button type="button" class="btn btn-default disabled">Remove</button>
-      <button type="button" class="btn btn-default disabled">Add to Worship...</button>
-      
-    </div>
-    <div class="col-3">
+  <div class="row" *ngIf="songs.length > 0">
+    <div class="col-2">
       <form class="form-inline w-100">
+        <h4>Filters</h4>
         <div class="form-group w-100">
-          <label class="sr-only" for="search">Search</label>
-          <input type="text" class="form-control w-100" id="search" placeholder="Search by name/lyrics/authors/etc">
+          <label for="search">Title/Lyrics</label>
+          <input name="search" type="text" [(ngModel)]="searchString" class="form-control w-100" id="search" placeholder="Search by title/lyrics" (keyup)="filterSongs()">
         </div>
       </form>
     </div>
-  </div>
-  <div class="row" *ngIf="songs.length > 0">
-    <div class="col-12">
-      {{ songs[39].title_1 }}
+    <div class="col-10">
+      <button type="button" class="btn btn-default">Add New</button>
+      <button type="button" class="btn btn-default" [ngClass]="{disabled: numRowsSelected()!=1}" (click)="routeToEdit()">Modify</button>
+      <button type="button" class="btn btn-default" [ngClass]="{disabled: numRowsSelected()==0}" (click)="removeSongs()">Remove</button>
+      <button type="button" class="btn btn-default" [ngClass]="{disabled: numRowsSelected()==0}">Add to Worship...</button>
+      <data-table
+        [items]="items"
+        [itemCount]="itemCount"
+        [limit]="itemLimit"
+        (reload)="reload($event)"
+        (rowDoubleClick)="songDoubleClicked($event)"
+
+        [selectOnRowClick]="true"
+        [multiSelect]="true"
+        [substituteRows]="false"
+        [selectColumn]="true">
+        <data-table-column
+          [property]="'title_1'"
+          [header]="'Title'"
+          [resizable]="true"
+          [sortable]="true">
+        </data-table-column>
+        <data-table-column
+          [property]="'user_ref'"
+          [header]="'User Ref'"
+          [resizable]="true"
+          [sortable]="true">
+        </data-table-column>
+        <data-table-column
+          [property]="'numwords'"
+          [header]="'# Words'"
+          [resizable]="true"
+          [sortable]="true">
+        </data-table-column>
+      </data-table>
     </div>
   </div>
 </div>
