Added fuzzy song search and remove

--- a/src/app/songs/songs.component.css
+++ b/src/app/songs/songs.component.css
@@ -5,3 +5,7 @@
 :host /deep/ .data-table .data-table-row.selected {
     background-color: #E4EDF9;
 }
+
+.filter-header {
+    padding-top: 10px;
+}
