--- a/src/app/songs/songs.component.css
+++ b/src/app/songs/songs.component.css
@@ -1,11 +1,22 @@
-.row {
-    padding: 15px;
-}
-
 :host /deep/ .data-table .data-table-row.selected {
     background-color: #E4EDF9;
 }
 
-.filter-header {
-    padding-top: 10px;
+:host /deep/ .data-table .data-table-row {
+    height: 20px;
+}
+
+.filter {
+    padding-right: 10px;
+    padding-bottom: 10px;
+    flex: 0 0 200px;
+    margin-right: 15px;
+}
+
+.filters-wrapper {
+
+}
+
+.songtable {
+    flex: 1 0 300px;
 }
