--- a/src/app/songs/songs.component.html
+++ b/src/app/songs/songs.component.html
@@ -1,36 +1,51 @@
-<div class="container-fluid">
-  <div class="row" *ngIf="songs.length > 0">
-    <div class="col-2">
-      <form class="form-inline w-100">
-        <h5 class="filter-header">Filter songs by:</h5>
+<div class="d-flex flex-wrap" *ngIf="songs.length > 0">
+  <div class="filter">
+    <h5>Filter songs by:</h5>
+    <div class="d-sm-flex flex-sm-wrap">
+      <form class="form-inline" style="flex: 1 0 200px">
         <div class="form-group w-100">
-          <label class="sr-only" for="search">Title/Lyrics</label>
-          <input name="search" type="text" [(ngModel)]="searchString" class="form-control w-100" id="search" placeholder="Title or Lyrics" (keyup)="filterSongs()">
+          <label class="sr-only" for="title_filter">Title</label>
+          <input name="title_filter" type="text"
+            [(ngModel)]="filters.title" class="form-control w-100" id="title_filter" placeholder="Title" (keyup)="filterSongs()">
+        </div>
+      </form>
+      <form class="form-inline" style="flex: 1 0 200px">
+        <div class="form-group w-100">
+          <label class="sr-only" for="lyrics_filter">Lyrics</label>
+          <input name="lyrics_filter" type="text"
+            [(ngModel)]="filters.lyrics" class="form-control w-100" id="lyrics_filter" placeholder="Lyrics" (keyup)="filterSongs()">
+        </div>
+      </form>
+      <form class="form-inline" style="flex: 1 0 200px">
+        <div class="form-group w-100">
+          <label class="sr-only" for="wordcount_filter">Number of words</label>
+          <input name="wordcount_filter" type="text"
+            [(ngModel)]="filters.wordcount" class="form-control w-100" id="wordcount_filter" placeholder="Word count (e.g. '1-3,5')" (keyup)="filterSongs()">
         </div>
       </form>
     </div>
-    <div class="col-10">
-      <button type="button" class="btn btn-default">Add New</button>
-      <button type="button" class="btn btn-default" [hidden]="numRowsSelected()==0"                        >Add to Worship...</button>
-      <button type="button" class="btn btn-danger"  [hidden]="numRowsSelected()==0" (click)="removeSongs()">Remove</button>
-      <button type="button" class="btn btn-default" [hidden]="numRowsSelected()!=1" (click)="routeToEdit()">Modify</button>
-      <data-table
-        [items]="items"
-        [itemCount]="itemCount"
-        [limit]="itemLimit"
-        [sortBy]="'numwords'"
-        (reload)="reload($event)"
-        (rowDoubleClick)="songDoubleClicked($event)"
-        [selectOnRowClick]="true"
-        [multiSelect]="true"
-        [selectColumn]="true">
-        <data-table-column *ngFor="let col of dataColumns"
-          [property]="col.property"
-          [header]="col.header"
-          [resizable]="col.resizable"
-          [sortable]="col.sortable">
-        </data-table-column>
-      </data-table>
-    </div>
+  </div>
+  <div class="songtable">
+    <button type="button" class="btn btn-default">Add New</button>
+    <button type="button" class="btn btn-default" [hidden]="numRowsSelected()==0"                        >Add to Worship...</button>
+    <button type="button" class="btn btn-danger"  [hidden]="numRowsSelected()==0" (click)="removeSongs()">Remove</button>
+    <button type="button" class="btn btn-default" [hidden]="numRowsSelected()!=1" (click)="routeToEdit()">View/Modify</button>
+    <data-table
+      [items]="items"
+      [itemCount]="itemCount"
+      [limit]="itemLimit"
+      [sortBy]="'numwords'"
+      (reload)="reload($event)"
+      (rowDoubleClick)="songDoubleClicked($event)"
+      [selectOnRowClick]="true"
+      [multiSelect]="true"
+      [selectColumn]="true">
+      <data-table-column *ngFor="let col of dataColumns"
+        [property]="col.property"
+        [header]="col.header"
+        [resizable]="col.resizable"
+        [sortable]="col.sortable">
+      </data-table-column>
+    </data-table>
   </div>
 </div>
