Added toast messages and proper udpate of last modified date

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+@import "~ng2-toastr/bundles/ng2-toastr.min.css";
 
 html {
     overflow-x: hidden;
