Added some invisible song columns to table

--- a/src/app/songs/songs.component.html
+++ b/src/app/songs/songs.component.html
@@ -44,7 +44,8 @@
         [property]="col.property"
         [header]="col.header"
         [resizable]="col.resizable"
-        [sortable]="col.sortable">
+        [sortable]="col.sortable"
+        [visible]="col.visible">
       </data-table-column>
     </data-table>
   </div>
