--- a/src/app/worship/worship.component.html
+++ b/src/app/worship/worship.component.html
@@ -1,3 +1,21 @@
-<p>
-  worship works!
-</p>
+<div class="d-flex h-100">
+  <div class="center-holder d-flex flex-column">
+    <div>
+      <h4>Create or Open a worship session to start...</h4>
+      <button class="btn btn-primary my-2">Create</button>
+      <button class="btn btn-primary my-2" disabled="true">Open</button>
+      <button class="btn btn-primary my-2" disabled="true">Clone</button>
+      <button class="btn btn-danger  my-2" disabled="true">Remove</button>
+    </div>
+    <div class="d-flex debug-border p-2 my-2 flex-1">
+      <div class="worship-select debug-border mx-2">
+        <data-table>
+
+        </data-table>
+      </div>
+      <div class="preview debug-border mx-2 d-flex">
+        <h5 class="m-auto">preview card</h5>
+      </div>
+    </div>
+  </div>
+</div>
