--- a/src/app/songs/songs.component.html
+++ b/src/app/songs/songs.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-wrap" *ngIf="songs.length > 0">
+<div class="d-flex flex-wrap h-100">
   <div class="filter">
     <h5>Filter songs by:</h5>
     <div class="d-sm-flex flex-sm-wrap">
@@ -25,10 +25,10 @@
       </form>
     </div>
   </div>
-  <div class="songtable" (mousewheel)="onMouseWheel($event)">
-    <button type="button" class="btn btn-default" (click)="routeToNewSong()">Add New</button>
+  <div class="songtable h-100" (mousewheel)="onMouseWheel($event)">
+    <button type="button" class="btn btn-primary" (click)="routeToNewSong()">Add New</button>
     <button type="button" class="btn btn-default" [hidden]="numRowsSelected()==0"                        >Add to Worship...</button>
-    <button type="button" class="btn btn-danger"  [hidden]="numRowsSelected()==0" (click)="removeSongs()">Remove</button>
+    <button type="button" class="btn btn-danger"  [hidden]="numRowsSelected()==0" (click)="removeData()">Remove</button>
     <button type="button" class="btn btn-default" [hidden]="numRowsSelected()!=1" (click)="routeToEdit()">View/Modify</button>
     <data-table
       [items]="items"
@@ -39,7 +39,8 @@
       (rowDoubleClick)="songDoubleClicked($event)"
       [selectOnRowClick]="true"
       [multiSelect]="true"
-      [selectColumn]="true">
+      [selectColumn]="true"
+      >
       <data-table-column *ngFor="let col of dataColumns"
         [property]="col.property"
         [header]="col.header"
