--- a/src/app/worship-edit/worship-edit.component.html
+++ b/src/app/worship-edit/worship-edit.component.html
@@ -5,7 +5,7 @@
     <form class="d-flex flex-column">
       <div class="form-group p-2 w-100">
         <label for="name">Name</label>
-        <input class="form-control" type="text" id="name" name="name" [(ngModel)]="worship.name" (keyup)="onKeyUp($event)">
+        <input class="form-control" type="text" id="name" name="name" [(ngModel)]="worship.name" (keyup)="updateTab()">
       </div>
       <div>
 
