--- a/src/app/worship-edit/worship-edit.component.html
+++ b/src/app/worship-edit/worship-edit.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex h-100">
-  <div class="item-list debug-border" style="width:18%">
-    <button type="button" class="btn btn-default">Back</button>
-    <button type="button" class="btn btn-default">Save Changes</button>
+  <div class="item-list" style="width:18%">
+    <button type="button" class="btn btn-default" (click)="navigateBack()">&#8249;&#8249; Back</button>
+    <button type="button" class="btn btn-default" (click)="saveChanges()" [disabled]="!isModified()">Save Changes</button>
     <form class="d-flex flex-column">
       <div class="form-group p-2 w-100">
         <label for="name">Name</label>
