Added song adding to worship

--- a/src/app/worship/worship.component.html
+++ b/src/app/worship/worship.component.html
@@ -13,6 +13,7 @@
           [items]="items"
           [itemCount]="itemCount"
           [limit]="itemLimit"
+          [header]="false"
           [sortBy]="'date_created'"
           (reload)="reload($event)"
           (rowDoubleClick)="worshipDoubleClicked($event)"
