--- a/src/app/songs/songs.component.html
+++ b/src/app/songs/songs.component.html
@@ -27,7 +27,7 @@
   </div>
   <div class="songtable h-100" (mousewheel)="onMouseWheel($event)">
     <button type="button" class="btn btn-primary" (click)="routeToNewSong()">Add New</button>
-    <button type="button" class="btn btn-default" [hidden]="numRowsSelected()==0"                        >Add to Worship...</button>
+    <button type="button" class="btn btn-default" [hidden]="numRowsSelected()==0" (click)="addToWorship()" *ngIf="worship">Add to Worship ( {{ worship.name }} )</button>
     <button type="button" class="btn btn-danger"  [hidden]="numRowsSelected()==0" (click)="removeData()">Remove</button>
     <button type="button" class="btn btn-default" [hidden]="numRowsSelected()!=1" (click)="routeToEdit()">View/Modify</button>
     <data-table
