--- a/src/app/worship-edit/worship-edit.component.html
+++ b/src/app/worship-edit/worship-edit.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex h-100">
-  <div class="item-list" style="width:18%">
+  <div class="item-list" style="width:20%">
     <button type="button" class="btn btn-default" (click)="navigateBack()">&#8249;&#8249; Back</button>
     <button type="button" class="btn btn-default" (click)="saveChanges()" [disabled]="!isModified()">Save Changes</button>
     <form class="d-flex flex-column">
@@ -7,8 +7,23 @@
         <label for="name">Name</label>
         <input class="form-control" type="text" id="name" name="name" [(ngModel)]="worship.name" (keyup)="updateTab()">
       </div>
-      <div>
-
+      <div class="px-2" *ngIf="worship">
+        <label>Items</label>
+        <data-table
+          [items]="items"
+          [itemCount]="itemCount"
+          [limit]="itemLimit"
+          [indexColumn]="false"
+          [header]="false"
+          [pagination]="false"
+          [selectOnRowClick]="true"
+          (reload)="reload($event)">
+          <data-table-column
+            [property]="'title'"
+            [resizable]="true"
+            [sortable]="false">
+          </data-table-column>
+        </data-table>
       </div>
     </form>
   </div>
