Refactor/Cleanup/Bug fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
     </li>
   </ul>
   <div class="flex-1 router-outlet-container">
-    <my-router-outlet (attached)="onComponentAttached($event)" (activate)="onComponentActivated($event)"></my-router-outlet>
+    <my-router-outlet (attached)="onComponentAttached($event)" (activate)="onComponentAttached($event)"></my-router-outlet>
   </div>
 </div>
