--- a/src/app/worship-edit/worship-edit.component.html
+++ b/src/app/worship-edit/worship-edit.component.html
@@ -9,21 +9,18 @@
       </div>
       <div class="px-2" *ngIf="worship">
         <label>Items</label>
-        <data-table
-          [items]="items"
-          [itemCount]="itemCount"
-          [limit]="itemLimit"
-          [indexColumn]="false"
-          [header]="false"
-          [pagination]="false"
-          [selectOnRowClick]="true"
-          (reload)="reload($event)">
-          <data-table-column
-            [property]="'title'"
-            [resizable]="true"
-            [sortable]="false">
-          </data-table-column>
-        </data-table>
+        <table class="table table-striped table-hover">
+          <tbody>
+            <tr *ngFor="let song of worship.items; let i = index" class="d-flex justify-content-end" [ngClass]="{selectedRow:i==selectedRow}">
+              <td class="flex-1" (click)="onRowSelected(i)">{{ song.title }}</td>
+              <td class="pr-2">
+                <button class="m-0 px-1 border-0" (click)="moveItemUp(i)">&uarr;</button>
+                <button class="m-0 px-1 border-0" (click)="moveItemDown(i)">&darr;</button>
+                <button class="m-0 px-1 border-0" (click)="removeItem(i)">X</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </form>
   </div>
