--- a/src/app/songs/songs.component.html
+++ b/src/app/songs/songs.component.html
@@ -34,7 +34,7 @@
       [items]="items"
       [itemCount]="itemCount"
       [limit]="itemLimit"
-      [sortBy]="'numwords'"
+      [sortBy]="'numWords'"
       (reload)="reload($event)"
       (rowDoubleClick)="songDoubleClicked($event)"
       [selectOnRowClick]="true"
