--- a/src/app/worship-edit/worship-edit.component.html
+++ b/src/app/worship-edit/worship-edit.component.html
@@ -34,7 +34,10 @@
         <div class="flex-1 debug-border"></div>
       </div>
       <div class="flex-1 debug-border">
-
+        <app-worship-viewer
+          [worshipId]="worshipId"
+          [worshipFromDb]="false">
+        </app-worship-viewer>
       </div>
     </div>
   </div>
