--- a/src/app/worship-edit/worship-edit.component.html
+++ b/src/app/worship-edit/worship-edit.component.html
@@ -9,7 +9,13 @@
       </div>
       <div class="px-2" *ngIf="worship">
         <label>Items</label>
-        <table class="table table-striped table-hover">
+        <ol class="list-group list-group-hover" [sortablejs]="worship.items">
+          <li class="list-group-item" *ngFor="let song of worship.items; let i = index" (click)="onRowSelected(song)" [ngClass]="{active:song==selectedItem}">
+            {{ song.title }}
+            <button (click)="removeItem(i)">X</button>
+          </li>
+        </ol>
+        <!--table class="table table-striped table-hover">
           <tbody>
             <tr *ngFor="let song of worship.items; let i = index" class="d-flex justify-content-end" [ngClass]="{selectedRow:i==selectedRow}">
               <td class="flex-1" (click)="onRowSelected(i)">{{ song.title }}</td>
@@ -20,7 +26,7 @@
               </td>
             </tr>
           </tbody>
-        </table>
+        </table-->
       </div>
     </form>
   </div>
