--- a/src/app/worship-edit/worship-edit.component.css
+++ b/src/app/worship-edit/worship-edit.component.css
@@ -5,6 +5,8 @@
 
 .list-group-item > button {
     border: none;
+    outline: none;
+    color: rgba(255, 0, 0, 0.2);
     background-color: rgba(255,255,255,0);
     float: right;
 }
