--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="d-flex flex-column h-100" *ngIf="tabs">
-  <ul class="nav nav-tabs" style="flex: 0 0 auto">
+  <ul class="nav nav-tabs" [hidden]="hideTab" style="flex: 0 0 auto">
     <li class="nav-item" *ngFor="let tab of tabs">
-      <a #worship class="nav-link" [routerLink]="tab.link" [ngClass]="{active: tab.isActive}">{{ tab.display }}</a>
+      <a #worship class="nav-link" [routerLink]="tab.link" [ngClass]="{active: tab.isActive}">
+        {{ tab.display }}
+      </a>
     </li>
   </ul>
   <div class="flex-1 router-outlet-container">
