--- a/src/app/worship-edit/worship-edit.component.html
+++ b/src/app/worship-edit/worship-edit.component.html
@@ -1,13 +1,15 @@
-<div class="d-flex h-100">
+<div class="d-flex h-100" *ngIf="worship">
   <div class="item-list" style="width:20%">
     <button type="button" class="btn btn-default" (click)="navigateBack()">&#8249;&#8249; Back</button>
     <button type="button" class="btn btn-default" (click)="saveChanges()" [disabled]="!isModified()">Save Changes</button>
+    <button type="button" class="btn btn-default" (click)="goLive()" *ngIf="!worship.liveId" [disabled]="worship.items.length==0">Go Live!</button>
+    <button type="button" class="btn btn-default" (click)="goLive()" *ngIf="worship.liveId"  [disabled]="worship.items.length==0" style="color:red">Unlive</button>
     <form class="d-flex flex-column">
       <div class="form-group p-2 w-100">
         <label for="name">Name</label>
         <input class="form-control" type="text" id="name" name="name" [(ngModel)]="worship.name" (keyup)="updateTab()">
       </div>
-      <div class="px-2" *ngIf="worship">
+      <div class="px-2">
         <label>Items</label>
         <ol class="list-group list-group-hover" [sortablejs]="worship.items">
           <li class="list-group-item py-0" *ngFor="let song of worship.items; let i = index" (click)="onRowSelected(i, song)" [ngClass]="{active:song==selectedItem}">
