--- a/src/app/live-control/live-control.component.html
+++ b/src/app/live-control/live-control.component.html
@@ -2,6 +2,8 @@
   <div>
     <button class="btn btn-default" (click)="navigateBack()">&larr; Back</button>
     <button class="btn btn-primary" (click)="goWatch()">Watch (in new window)</button>
+    <button class="btn btn-default" (click)="navigateWorship()">Edit Worship</button>
+    
   </div>
   <div class="d-flex flex-1" tabindex="0" (keyup)="onKeyUp($event)" *ngIf="liveSession && !liveSession.removed else showError">
     <div class="flex-1 d-flex flex-column">
