--- a/src/app/worship-viewer/worship-viewer.component.css
+++ b/src/app/worship-viewer/worship-viewer.component.css
@@ -1,10 +1,13 @@
 p {
     line-height: 1em;
     font-size: 2em;
+    color: white;
+    text-align: center;
 }
 
 .holder {
     outline: none;
+    position: relative;
 }
 
 .footer {
@@ -12,5 +15,29 @@ p {
     top: 0;
     left: 0;
     z-index: 2;
-    font-size: 0.8em;
+    color: white;
+    padding: 5px;
+}
+
+.videobg {
+    object-fit: fill;
+}
+
+.background {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    z-index: -100;
+}
+
+.foreground {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    min-height: 100%;
+    min-width:  100%;
+    height: 100%;
+    width:  100%;
+    padding: 10px;
 }
