--- a/src/app/worship-viewer/worship-viewer.component.html
+++ b/src/app/worship-viewer/worship-viewer.component.html
@@ -1,18 +1,24 @@
-<div #container class="holder h-100" style="position:relative" tabindex="0" (keyup)="onKeyUp($event)">
-  <ng-container *ngIf="currentParagraph as para">
+<div #container class="holder h-100 w-100" style="position:relative" tabindex="0" (keyup)="onKeyUp($event)">
+  <div class="background h-100 w-100">
+    <video loop autoplay muted class="videobg h-100 w-100">
+      <source src="assets/bg.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+  </div>
+  <div class="foreground" *ngIf="currentParagraph as para">
     <div class="d-flex flex-column p-2 h-100">
       <div class="region1 flex-1 m-auto d-flex flex-column align-items-center justify-content-end">
-        <p [ngStyle]="style" *ngFor="let line of para.getRegion1Lines()">{{ line }}</p>
+        <p [ngStyle]="pStyle" *ngFor="let line of para.getRegion1Lines()">{{ line }}</p>
       </div>
       <div class="region2 flex-1 m-auto d-flex flex-column align-items-center justify-content-start">
-        <p [ngStyle]="style" *ngFor="let line of para.getRegion2Lines()">{{ line }}</p>
+        <p [ngStyle]="pStyle" *ngFor="let line of para.getRegion2Lines()">{{ line }}</p>
       </div>
     </div>
-    <div class="footer w-100 h-100">
+    <div class="footer w-100 h-100" [ngStyle]="footerStyle">
       <div class="d-flex h-100 flex-column justify-content-end" *ngIf="currentItem as item">
         <div class="ml-auto mb-auto">{{ item.title }}</div>
         <div class="ml-auto">{{ liveSession.pageIndex+1 }}.{{liveSession.paragraphIndex+1}} of {{ currentItem.getPages().length }}</div>
       </div>
     </div>
-  </ng-container>
+  </div>
 </div>
